GNOME Bugzilla – Bug 732004
Trash list view -- leaves no space for the actual name
Last modified: 2014-10-31 20:46:15 UTC
Created attachment 278887 [details] screenshot With recent Nautilus, opening the Trash window in list view makes it near-impossible to read the actual file names, unless I maximize the window. It seems that the *last* column (original path) is always expanded to fit the entire text, stealing space from the "name" column (which sometimes actually shows just the icon and "a..."). nautilus 3.12, 3.13.1 gtk3 3.12, 3.13.2-414-gd80bf07
I was able to reproduce it on 3.12.2. The problem also concerns the search in list view. In both cases it is impossible to change the size of the columns. But in git master (3.13.2) this seems to be fixed. Both Trash window and a search in list view doesn't hide the file name and it is possible to resize the columns.
Created attachment 284174 [details] another screenshot Looks even worse here.
Created attachment 284244 [details] [review] nautilus-list-view: Avoid unreadable names Currently if the view is resized, the column name is resized as well given that use ellipsization allowing the column to become unreadable. To avoid that, use width-chars property to set a desired width, but at the same time allowing the user to resize without limits the name column if desired.
I've been testing this patch works like a charm. If would be great to get this fixed for 3.14. (By the way, this is a duplicate of bug 693459.)
3.14 is over - move to the 3.16 target milestone.
Review of attachment 284244 [details] [review]: Looks good
Thanks for review! Attachment 284244 [details] pushed as 17061d5 - nautilus-list-view: Avoid unreadable names
*** Bug 693459 has been marked as a duplicate of this bug. ***
Created attachment 289724 [details] Long list of long filenames I regret to say that the patch solves the problem only in part. Now there is a lower bound for column width that lets a scrollbar appear if the column is too small, but when managing long filename the problem is still there: no way to read the whole filename. The status bar still not help because it puts ellipsis in the middle of filename. The ONLY solution here is the one that let the filname column to expand as wide as I need it, allowing scrollbar to appear. The same can be told for foldername column. In the attached image I try to expand the Filename (Nome in italian) column but the sum of all columns width is limited to the available space.
(In reply to comment #9) Are you sure you are running the latest development version of nautilus? This fix is not yet available in any released version of nautilus.